--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 		<input type = "text" placeholder="ID or Email" height="180"/><br>
 		<input type = "password" placeholder="Password" height="180"/><br>
 	</form>
-	<div type="button" login-id="button">
+	<div type="button" id="login-button">
+
+		<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+	 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
+	  <path stroke="green" id="svg_1" d="m9.70368,30.69119l10.32771,-10.49793l-10.32771,-10.49795l5.9027,-5.99946l16.23232,16.49741l-16.23232,16.50259" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="null" fill="green"/>
+	 </g>
+	</svg>
 
 	<div>
 </body>
